--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -60,24 +60,63 @@ hide_cot = false
 custom_css = "/public/stylesheet.css"
 
 # Override default MUI light theme. (Check theme.ts)
+# teal = "#00cada"
+# light_bg = "#afafb6"
+# dark_bg = "#110e24"
+# dark_purple = "#46406b"
+# light_purple="#69639c"
+
 [UI.theme.light]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#FAFAFE"
+#    paper      = "#FFFFFF"
 
     [UI.theme.light.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        # main  = "#00cada"
+        # dark  = "#980039"
+        # light = "#FFE7EB"
 
 # Override default MUI dark theme. (Check theme.ts)
 [UI.theme.dark]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#110e24"
+#    paper      = "#FFFFFF"
 
     [UI.theme.dark.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        main  = "#00cada" # cyan
+        dark  = "#008E99" # dark cyan
+        light = "#D6FCFF" # light cyan
+
+    [UI.theme.dark.secondary]
+        main  = "#FF406b" # Bright pink
+        dark  = "#46406b" # english cyan
+        light = "#69639c" # ultra violet
+
+    [UI.theme.dark.text]
+        #primary   = "#FF0000" 
+        #secondary = "#FFFF00"
+
+#
+# background: {
+#       default: grey[850],
+#       paper: grey[900]
+#     },
+#     primary: {
+#       main: '#F80061',
+#       dark: primary[800],
+#       light: '#FFE7EB',
+#       contrastText: white
+#     },
+#     secondary: {
+#       main: '#9757D7',
+#       dark: '#763FB8',
+#       light: '#B87FE7',
+#       contrastText: white
+#     },
+#     divider: grey[800],
+#     text: {
+#       primary: grey[200],
+#       secondary: grey[400]
+#     }
+
 
 
 [meta]
