--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -67,18 +67,18 @@ custom_css = "/public/stylesheet.css"
 # light_purple="#69639c"
 
 [UI.theme.light]
-    background = "#FAFAFE"
+    #background = "#FAFAFE"
 #    paper      = "#FFFFFF"
 
     [UI.theme.light.primary]
-        # main  = "#00cada"
-        # dark  = "#980039"
-        # light = "#FFE7EB"
+        main  = "#00AFBC"
+        dark  = "#00757D"
+        light = "#EAFEFF"
 
 # Override default MUI dark theme. (Check theme.ts)
 [UI.theme.dark]
-    background = "#110e24"
-#    paper      = "#FFFFFF"
+    #background = "#110e24"
+    #paper      = "#008E99"
 
     [UI.theme.dark.primary]
         main  = "#00cada" # cyan
@@ -93,31 +93,6 @@ custom_css = "/public/stylesheet.css"
     [UI.theme.dark.text]
         #primary   = "#FF0000" 
         #secondary = "#FFFF00"
-
-#
-# background: {
-#       default: grey[850],
-#       paper: grey[900]
-#     },
-#     primary: {
-#       main: '#F80061',
-#       dark: primary[800],
-#       light: '#FFE7EB',
-#       contrastText: white
-#     },
-#     secondary: {
-#       main: '#9757D7',
-#       dark: '#763FB8',
-#       light: '#B87FE7',
-#       contrastText: white
-#     },
-#     divider: grey[800],
-#     text: {
-#       primary: grey[200],
-#       secondary: grey[400]
-#     }
-
-
 
 [meta]
 generated_by = "1.0.101"
