--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -35,7 +35,7 @@ multi_modal = true
 
 [UI]
 # Name of the app and chatbot.
-name = "Finn (Chatbot)"
+name = "Finn"
 
 # Show the readme while the thread is empty.
 show_readme_as_default = true
@@ -47,7 +47,7 @@ description = "Finn. A nifty finance expert."
 default_collapse_content = true
 
 # The default value for the expand messages settings.
-default_expand_messages = false
+default_expand_messages = true
 
 # Hide the chain of thought details from the user in the UI.
 hide_cot = false
