--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -47,7 +47,7 @@ description = "Finn. A nifty finance expert."
 default_collapse_content = true
 
 # The default value for the expand messages settings.
-default_expand_messages = true
+default_expand_messages = false
 
 # Hide the chain of thought details from the user in the UI.
 hide_cot = false
